<resources>
    <string name="app_name">Travel Journyl</string>
    <string name="newTravelHeader">Where have you been?</string>
    <string name="newTravelDatesTravelled">Dates Travelled: </string>
    <string name="locationHint">Location</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="newTravelExperience">New Travel Experience</string>
    <string name="existingTravelExperience">Existing Travel Experiences</string>
    <string name="viewTravelFacts">View Travel Facts</string>
    <string name="viewRSSFeed">View RSS Feed</string>
    <string name="travelFactHeader">Travel Fact of the Day!</string>
    <string name="addNewFactBtnTxt">Add Your Own Fact!</string>
    <string name="newRandomFactBtnTxt">New Fact</string>
    <string name="action_about">About Menu</string>
    <string name="action_drawing">Drawing Menu</string>
    <string name="action_maps">Maps Menu</string>
    <string name="alertDialogAboutTitle">About this Application</string>
    <string name="alertDialogAboutMessage">This application is intended to be used as a personal travel journal.
    You can record new travel experiences, view existing travel experiences, view interesting travel facts from
    a database of my creation, and view an RSS feed about world news. You can also add your own travel facts to the
        database as you learn from your travels! If you would like to report any bugs or comment on
    my application, you can contact me at drake.gens@gmail.com</string>
    <string name="alertDialogAddNewFactTitle">Add New Fact</string>
    <string name="alertDialogAddNewFactMessage">Enter your fact: </string>
    <string name="RSSFeedtitle">World News RSS Feed from BBC</string>
    <string name="experienceDetailsHeader">Write about your experience</string>
    <string name="exitWithoutSavingbtn">Exit Without Saving</string>
    <string name="savingbtn">Save</string>
    <string name="errorNotification">Error</string>
    <string name="alertDialogNewTravelMessage">Please fill in all details!</string>
    <string name="alertDialogSuccessTravelAddedHeader">Success!</string>
    <string name="alertDialogSuccessTravelAddedMessage">Your experience has been successfully added.</string>
    <string name="headerForExistingTravelExperiences">View Existing Travel Experiences!</string>
    <string name="title_activity_maps">Map</string>
    <string name="alertErrorMessage">Please allow location permissions to use this feature.</string>
</resources>
