<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="drakegens.traveljournyl.MainActivity"
    tools:showIn="@layout/activity_main"
    android:weightSum="1">


    <TextView
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mainMenuHeader"
        tools:ignore="HardcodedText"
        android:layout_weight="0.10"
        android:fontFamily="serif"
        android:textSize="36sp"
        android:textAlignment="center"
        android:textStyle="normal|bold" />

    <Button
        android:text="@string/newTravelExperience"
        android:layout_width="match_parent"
        android:id="@+id/newTravelExbtn"
        android:layout_weight="0.25"
        android:layout_height="65dp" />

    <Button
        android:text="@string/existingTravelExperience"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/existTravelExbtn"
        android:layout_weight="0.25" />

    <Button
        android:text="@string/viewTravelFacts"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/travelFactsbtn"
        android:layout_weight="0.25" />

    <Button
        android:text="@string/viewRSSFeed"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/RSSFeedbtn"
        android:layout_weight="0.25" />
</LinearLayout>