<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_travel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="drakegens.traveljournyl.NewTravelActivity">
    <TextView
        android:text="@string/newTravelHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/header"
        android:textSize="30sp"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:layout_marginTop="11dp" />
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="38dp"
        android:id="@+id/location"
        android:hint="@string/locationHint" />

            <TextView
                android:text="@string/newTravelDatesTravelled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvDatesTravelled"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:textColor="?android:attr/textColorTertiary" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/etFromDate"
                    android:layout_weight="1"
                    android:focusable="false"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/etToDate"
                    android:layout_weight="1" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>



</LinearLayout>
